--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
 				<div class="fotocontato">
 					<form>
 						<h2>Contato</h2>
-						<p>Fale conosco pelo formulário</p>
+						<h4>Fale conosco pelo formulário</h4>
 						<div class="cols">
 							<div class="col">
 								<div class="form-group">
@@ -68,9 +68,9 @@
 							<button class="botao medio"><i class="fa fa-arrow-right"></i> Enviar</button>
 							</div>
 						</div>	
-						<p>ENCOMENDAS APENAS PELO TELEFONE 
+						<p>ENCOMENDAS APENAS PELO TELEFONE <br>
 DE SEGUNDA A SÁBADO, DAS 18H30 À 0H</p>
-						<h3>(48) 3249-3249</h3>
+						<h4>(48) 3249-3249</h4>
 					</form>
 				</div>
 			</div>	
@@ -84,7 +84,7 @@ DE SEGUNDA A SÁBADO, DAS 18H30 À 0H</p>
 			<a href="index.html">
 				<img src="images/logo-tag-footer.png" alt="logo rodape">
 			</a>
-			<p>&copy 2016. Todos os direitos reservados.</p>
+			<p>Floripa Sushi Delivery &copy 2017 Todos os direitos reservados.</p>
 		</div>
 	</footer>
 </body>
