--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<a href="index.html">
 				<img src="images/logo-tag-footer.png" alt="logo rodape">
 			</a>
-			<p>&copy 2016. Todos os direitos reservados.</p>
+			<p>Floripa Sushi Delivery &copy 2017 Todos os direitos reservados.</p>
 		</div>
 	</footer>
 </body>
