--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,7 @@
 		<div class="logo">
 			<li><a href="index.html">
 				<img src="images/logofsdtopo.png" alt="logo topo">
+				<h2>Floripa <strong>Sushi</strong>Delivery</h2>
 			</a>
 		</div>
 		<div class="links">
