--- a/localização.html
+++ b/localização.html
@@ -5,7 +5,7 @@
 	<title>Floripa Sushi Delivery</title>
 	<link rel="stylesheet" href="css/geral.css">
 	<link rel="stylesheet" href="css/plugins.css">
-	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="css/localização.css">
 </head>
 <body>
 	<header>
@@ -37,8 +37,16 @@
 		</div>
 	</header>
 	<main>
-		<div class="fotomain">
-			
+		<div class="fotolocal">
+			<h2>Como chegar</h2>
+			<h4>Clique e encontre <br>o melhor trajeto</h4>
+			<h5>Rua Des. Pedro Silva - 2703<br>Coqueiros
+Florianópolis</h5>
+
+		<a href="https://goo.gl/maps/KS3aJ6N27NS2">
+			<img src="images/google-maps.png" alt="">
+		</a>
+
 		</div>
 	</main>
 	<footer>
