--- a/menu.html
+++ b/menu.html
@@ -40,8 +40,10 @@
 		<section class="cardapio">
 			<div class="container">
 				<div class="foto">
-					<h2>Confira o menu!</h2>
-					<h3>O melhor da culinária Japonesa<br> no conforto da sua casa.</h3>
+				</div>
+				<div class="texto">
+					<h2>Confira!</h2>
+					<h3>Monte seu pedido e peça por telefone!</h3>
 				</div>
 				<ul>
 					<li>
@@ -104,7 +106,7 @@
 					</li>
 					<li>
 						<figure>
-							<img src="images/entradas .jpg" alt="entradas">
+							<img src="http://placehold.it/688x410" alt="entradas">
 							<figcaption>
 								<a href="#">
 									<h3>nome prato</h3>
@@ -116,7 +118,7 @@
 					</li>
 					<li>
 						<figure>
-							<img src="images/entradas .jpg" alt="entradas">
+							<img src="http://placehold.it/688x410" alt="entradas">
 							<figcaption>
 								<a href="#">
 									<h3>nome prato</h3>
@@ -128,7 +130,7 @@
 					</li>
 					<li>
 						<figure>
-							<img src="images/entradas .jpg" alt="entradas">
+							<img src="http://placehold.it/688x410" alt="entradas">
 							<figcaption>
 								<a href="#">
 									<h3>nome prato</h3>
@@ -140,7 +142,7 @@
 					</li>
 					<li>
 						<figure>
-							<img src="images/entradas .jpg" alt="entradas">
+							<img src="http://placehold.it/688x410" alt="entradas">
 							<figcaption>
 								<a href="#">
 									<h3>nome prato</h3>
@@ -152,7 +154,7 @@
 					</li>
 					<li>
 						<figure>
-							<img src="images/entradas .jpg" alt="entradas">
+							<img src="http://placehold.it/688x410" alt="entradas">
 							<figcaption>
 								<a href="#">
 									<h3>nome prato</h3>
