--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Floripa Sushi Delivery</title>
 	<link rel="stylesheet" href="css/geral.css">
 	<link rel="stylesheet" href="css/plugins.css">
@@ -19,11 +20,11 @@
 			<nav>	
 				<ul>
 					<li>
-						<a href="index.html"></a>Início
+						<a href="index.html">Início</a>
 					</li>
-					<li><a href="menu.html"></a>Menu</li>
-					<li><a href="loc.html"></a>Localização</li>
-					<li><a href="contato.html"></a>Contato</li>
+					<li><a href="menu2.html">Menu</a></li>
+					<li><a href="loc.html">Localização</a></li>
+					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
 			<ul class="social">
