--- a/loc.html
+++ b/loc.html
@@ -45,7 +45,7 @@
 				Florianópolis</h1>
 
 		<a href="https://goo.gl/maps/KS3aJ6N27NS2">
-			<img src="images/google-maps.png" alt="">
+			<img src="images/Google-Maps.png" alt="google maps">
 		</a>
 
 		</div>
