--- a/menu2.html
+++ b/menu2.html
@@ -50,7 +50,7 @@
 	<section class="main">
 		
 		<article class="entradas">
-			<h2 class="category">Entradas</h2>
+			<h2 class="entrada">Entradas</h2>
 				<h3 class="title">001 . SUNOMONO SIMPLES . . . . . . . . . . . . . . . <strong>R$ 06,00</strong></h3>
 				<p>Pepino Japonês com Molho Sushizu e Gergelim</p>
 
