--- a/contato.html
+++ b/contato.html
@@ -32,9 +32,23 @@
 				<li>
 					<a href="#"<i class="fa fa-instagram"></i></a>
 				</li>
+				<li>
+					<div class="mostrarnav"> <i class="fa fa-bars"></i></div>
+				</li>
 			</ul>	
 		</div>
 	</header>
+	<div class="menu-responsivo">
+
+		<nav>	
+			<ul class="menu">
+				<li><a href="index.html"><i class="fa fa-home"></i> Início</a></li>
+				<li><a href="menu2.html"><i class="fa fa-cutlery"></i> Menu</a></li>
+				<li><a href="loc.html"><i class="fa fa-map"></i> Localização</a></li>
+				<li><a href="contato.html"><i class="fa fa-envelope"></i> Contato</a></li>
+			</ul>
+		</nav>
+	</div>	
 	<main>
 		<section class="contato">
 			<div class="container">
@@ -71,7 +85,7 @@
 							</div>
 						</div>	
 						<p>ENCOMENDAS PELO TELEFONE ou no balcão <br>
-DE dmingo A sexta, DAS 18H Às 23h 30min.</p>
+							DE domingo A sexta, DAS 18H Às 23h 30min.</p>
 						<h4>(48) 3249-3249</h4>
 					</form>
 				</div>
@@ -89,5 +103,15 @@ DE dmingo A sexta, DAS 18H Às 23h 30min.</p>
 			<p>Floripa Sushi Delivery &copy 2017 Todos os direitos reservados.</p>
 		</div>
 	</footer>
+		<!-- Menu responsivo -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script>
+		var $mostrarnav = $('.mostrarnav');
+		var $nav = $('nav');
+
+		$mostrarnav.on('click', function () {
+			$nav.toggleClass('mostrar');
+		});
+	</script>
 </body>
 </html>
