--- a/loc.html
+++ b/loc.html
@@ -34,9 +34,23 @@
 				<li>
 					<a href="#"<i class="fa fa-instagram"></i></a>
 				</li>
+				<li>
+					<div class="mostrarnav"> <i class="fa fa-bars"></i></div>
+				</li>
 			</ul>	
 		</div>
 	</header>
+	<div class="menu-responsivo">
+
+		<nav>	
+			<ul class="menu">
+				<li><a href="index.html"><i class="fa fa-home"></i> Início</a></li>
+				<li><a href="menu2.html"><i class="fa fa-cutlery"></i> Menu</a></li>
+				<li><a href="loc.html"><i class="fa fa-map"></i> Localização</a></li>
+				<li><a href="contato.html"><i class="fa fa-envelope"></i> Contato</a></li>
+			</ul>
+		</nav>
+	</div>	
 	<main>
 		<div class="fotolocal">
 			<h2>Como chegar</h2>
@@ -58,5 +72,15 @@
 			<p>Floripa Sushi Delivery &copy 2017 Todos os direitos reservados.</p>
 		</div>
 	</footer>
+	<!-- Menu responsivo -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script>
+		var $mostrarnav = $('.mostrarnav');
+		var $nav = $('nav');
+
+		$mostrarnav.on('click', function () {
+			$nav.toggleClass('mostrar');
+		});
+	</script>
 </body>
 </html>
