--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/geral.css">
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/home.css">
+	<link rel="icon" href="images/favicon2.png" type="image/jpg"></link> 
 </head>
 <body>
 	<header>
@@ -29,10 +30,10 @@
 			</nav>
 			<ul class="social">
 				<li>
-					<a href="#"<i class="fa fa-facebook"></i></a>
+					<a href="https://www.facebook.com/pg/floripasushidelivery"<i class="fa fa-facebook"></i></a>
 				</li>
 				<li>
-					<a href="#"<i class="fa fa-instagram"></i></a>
+					<a href="https://www.instagram.com/floripasushidelivery"<i class="fa fa-instagram"></i></a>
 				</li>
 				<li>
 					<div class="mostrarnav"> <i class="fa fa-bars"></i></div>
