--- a/menu2.html
+++ b/menu2.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/menu2.css">
 	<link rel="stylesheet" href="cdd/menu-responsivo.css">
 	<link rel="stylesheet" href="bower_components/wow/css/libs/animate.css">
+	<link rel="icon" href="images/favicon2.png" type="image/jpg"></link> 
 	
 </head>
 <body>
@@ -35,10 +36,10 @@
 			
 			<ul class="social" >
 				<li>
-					<a href="#"<i class="fa fa-facebook"></i></a>
+					<a href="https://www.facebook.com/pg/floripasushidelivery"<i class="fa fa-facebook"></i></a>
 				</li>
 				<li>
-					<a href="#"<i class="fa fa-instagram"></i></a>
+					<a href="https://www.instagram.com/floripasushidelivery"<i class="fa fa-instagram"></i></a>
 				</li>
 				<li>
 					<div class="mostrarnav"> <i class="fa fa-bars"></i></div>
