--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/home.css">
 	<link rel="icon" href="images/favicon2.png" type="image/jpg"></link> 
+	<link rel="stylesheet" href="css/animate.css"></link> 
 </head>
 <body>
 	<header>
-		<div class="logo">
+		<div class="logo wow bounceInLeft">
 			<li><a href="index.html">
 				<img src="images/logofsdtopo.png" alt="logo topo">
 				<h2>Floripa</h2> <h1>Sushi</h1><h2>Delivery</h2>
 			</a>
 		</div>
-		<div class="links">
+		<div class="links wow slideInDown">
 			<nav>	
 				<ul>
 					<li>
@@ -28,7 +29,7 @@
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
-			<ul class="social">
+			<ul class="social wow slideInDown">
 				<li>
 					<a href="https://www.facebook.com/pg/floripasushidelivery"<i class="fa fa-facebook"></i></a>
 				</li>
@@ -53,7 +54,7 @@
 		</nav>
 	</div>	
 	<main>
-		<div class="fotomain">
+		<div class="fotomain wow flipOutY">
 			
 		</div>
 	</main>
@@ -75,5 +76,9 @@
 			$nav.toggleClass('mostrar');
 		});
 	</script>
+	<script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+  	</script>
 </body>
 </html>
