--- a/menu2.html
+++ b/menu2.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="css/plugins.css">
 	<link rel="stylesheet" href="css/menu2.css">
 	<link rel="stylesheet" href="cdd/menu-responsivo.css">
-	<link rel="stylesheet" href="bower_components/wow/css/libs/animate.css">
 	<link rel="icon" href="images/favicon2.png" type="image/jpg"></link> 
 	<link rel="stylesheet" href="css/animate.css"></link> 
 	
@@ -17,13 +16,13 @@
 <body>
 	<header>
 		
-		<div class="logo">
+		<div class="logo wow bounceInLeft">
 			<li><a href="index.html">
 				<img src="images/logofsdtopo.png" alt="logo topo">
 				<h2>Floripa</h2> <h1>Sushi</h1><h2>Delivery</h2>
 			</a>
 		</div>
-		<div class="links">
+		<div class="links wow slideInDown">
 			<nav class="a">	
 				<ul>
 					<li>
@@ -35,7 +34,7 @@
 				</ul>
 			</nav>
 			
-			<ul class="social" >
+			<ul class="social wow slideInDown" >
 				<li>
 					<a href="https://www.facebook.com/pg/floripasushidelivery"<i class="fa fa-facebook"></i></a>
 				</li>
@@ -60,7 +59,7 @@
 			</ul>
 		</nav>
 	</div>	
-	<section class="intro">
+	<section class="intro wow zoomIn" data-wow-duration="2s" data-wow-delay="0.2s">
 		<div class="foto">
 		</div>
 			<div class="texto">
